# rust

./: Cargo.toml  readme.md
src/: cli.rs  main.rs
src/cmds/: cat.rs  handles.rs  hash.rs  mod.rs
src/cmds/fmt/: fmt.rs
src/core/: mod.rs
src/core/formats/: auto_fmt.rs  json_fmt.rs  markdown_fmt.rs  mod.rs  xml_fmt.rs  yaml_fmt.rs
src/core/hash/: md5.rs  sha1.rs  sha256.rs  sha512.rs
src/utils/: formats.rs  get_exts.rs  mod.rs
src/utils/file/: can_create.rs  can_read.rs  can_write.rs  file_exist.rs  is_dir.rs  mod.rs  write.rs
src/utils/mode/: cmd_mode.rs  mod.rs
src/utils/styles/: colors.rs
src/utils/time/: mod.rs  time_calc.rs
tests/: colors_test.rs  yml_test.rs
