[package]
name = "anchor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
comrak = "0.35.0"
html2md = "0.2.15"
indicatif = "0.17.11"
md5 = "0.7.0"
memmap2 = "0.9.5"
owo-colors = "4.1.0"
quick-xml = "0.37.2"
rayon = "1.10.0"
regex = "1.11.1"
roxmltree = "0.20.0"
serde_json = "1.0.138"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
sha2 = "0.10.8"
yaml-rust = "0.4.5"
